--- a/index.html
+++ b/index.html
@@ -3,200 +3,173 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>AriaHQ — Clean Preview</title>
+<title>AriaHQ — Focus Preview</title>
 <style>
 :root{
   --bg:#ffffff;
-  --text:#111315;
+  --text:#0f1418;
   --muted:#5b6166;
-  --border:#e8e9ec;
+  --border:#eef0f2;
   --accent1:#10A37F;
   --accent2:#1A7F64;
   --card:#ffffff;
-  --shadow:0 8px 24px rgba(16,163,127,.06), 0 2px 6px rgba(0,0,0,.04);
-  --radius:16px;
+  --shadow:0 12px 32px rgba(16,163,127,.06), 0 2px 6px rgba(0,0,0,.04);
+  --radius:18px;
+  --maxw:1160px;
 }
 *{box-sizing:border-box}
-html,body{margin:0;padding:0;height:100%}
-body{background:var(--bg);color:var(--text);font:15px/1.55 Inter,ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial}
+html,body{margin:0;padding:0}
+body{background:var(--bg);color:var(--text);font:16px/1.6 Inter,ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial}
 .header{
   position:sticky; top:0; z-index:10;
   background:rgba(255,255,255,.9); backdrop-filter:saturate(120%) blur(8px);
   border-bottom:1px solid var(--border);
 }
-.header-inner{max-width:1280px;margin:0 auto;padding:14px 20px;display:flex;align-items:center;gap:14px;justify-content:space-between}
-.brand{display:flex;align-items:center;gap:10px}
-.logo{width:28px;height:28px;border-radius:8px;background:linear-gradient(100deg,var(--accent1),var(--accent2));display:grid;place-items:center;color:white;font-weight:700}
-.nav{display:flex;gap:10px}
-.nav a{padding:8px 10px;border-radius:10px;color:var(--muted);text-decoration:none}
-.nav a.active,.nav a:hover{background:#f5f7f8;color:var(--text)}
-.cta{display:flex;gap:8px}
-.btn{border:1px solid var(--border);background:white;color:var(--text);padding:8px 12px;border-radius:999px;cursor:pointer}
-.btn-primary{border:none;background:linear-gradient(120deg,var(--accent1),var(--accent2));color:white;box-shadow:0 8px 22px rgba(16,163,127,.25)}
+.header-inner{max-width:var(--maxw);margin:0 auto;padding:18px 24px;display:flex;align-items:center;gap:18px;justify-content:space-between}
+.brand{display:flex;align-items:center;gap:12px}
+.logo{width:30px;height:30px;border-radius:8px;background:linear-gradient(100deg,var(--accent1),var(--accent2));display:grid;place-items:center;color:white;font-weight:700}
+.nav{display:flex;gap:14px}
+.nav a{padding:8px 12px;border-radius:10px;color:var(--muted);text-decoration:none}
+.nav a.active,.nav a:hover{background:#f6f8f9;color:var(--text)}
+.btn{border:1px solid var(--border);background:white;color:var(--text);padding:10px 14px;border-radius:999px;cursor:pointer}
+.btn-primary{border:none;background:linear-gradient(120deg,var(--accent1),var(--accent2));color:white;box-shadow:0 10px 26px rgba(16,163,127,.22)}
 
-.main{max-width:1280px;margin:0 auto;padding:20px}
-.grid{display:grid;gap:14px}
-.cols-3{grid-template-columns:repeat(3,1fr)}
+.main{max-width:var(--maxw);margin:0 auto;padding:28px 24px 40px}
+.section{margin:24px 0}
 .card{
   background:var(--card);
   border:1px solid var(--border);
   border-radius:var(--radius);
   box-shadow:var(--shadow);
-  padding:16px;
+  padding:20px;
 }
-.card h3{margin:0 0 8px;font-size:14px;color:#2a2f33}
-.kpi{font-size:28px;font-weight:800;letter-spacing:-0.02em}
-
 .hero{
-  display:grid;grid-template-columns:1.4fr .6fr;gap:16px;align-items:center;margin:16px 0 6px;
+  display:grid;grid-template-columns:1.2fr .8fr;gap:24px;align-items:center;
 }
-.hero .welcome{padding:18px 20px;border:1px solid var(--border);border-radius:20px;background:linear-gradient(180deg, #fff, #fafbfc);box-shadow:var(--shadow)}
-.hero h1{margin:0 0 6px;font-size:22px}
+.hero h1{margin:0 0 6px;font-size:28px;letter-spacing:-0.02em}
 .hero p{margin:0;color:var(--muted)}
 
-.kpi-row{display:grid;grid-template-columns:repeat(4,1fr);gap:14px}
-.spark{height:40px}
-.section-title{margin:12px 2px 6px;font-weight:700}
-.flex{display:flex;gap:14px}
-.canvas-card{flex:1}
-.table{width:100%;border-collapse:collapse;font-size:13px}
-.table th,.table td{padding:9px;border-bottom:1px solid var(--border);text-align:left}
-.badge{padding:4px 8px;border-radius:999px;background:#f3f6f5;color:#0f6f57;font-size:12px}
+.kpis{display:grid;grid-template-columns:repeat(2,1fr);gap:20px;margin-top:6px}
+.kpi .value{font-size:34px;font-weight:800;letter-spacing:-0.02em}
+.kpi .spark{height:44px}
 
-footer{max-width:1280px;margin:24px auto;padding:10px 20px;color:var(--muted);font-size:12px;border-top:1px solid var(--border)}
-/* minimal responsiveness */
+.figure{height:360px;border:1px solid var(--border);border-radius:16px;background:linear-gradient(180deg,#fff,#fafbfd);display:flex;align-items:center;justify-content:center;position:relative}
+.figure svg{width:100%;height:100%;}
+.fig-legend{position:absolute;top:12px;right:12px;display:flex;gap:10px;font-size:12px;color:var(--muted)}
+.dot{width:8px;height:8px;border-radius:999px;display:inline-block}
+.dot.rev{background:#10A37F}.dot.gm{background:#1A7F64}
+
+.twocol{display:grid;grid-template-columns:1fr 1fr;gap:24px}
+.list{list-style:none;margin:0;padding:0;display:grid;gap:10px}
+.item{display:flex;align-items:center;gap:10px;padding:10px 12px;border:1px solid var(--border);border-radius:12px;background:#fff}
+.badge{padding:4px 10px;border-radius:999px;background:#eef7f4;color:#0f6f57;font-size:12px;margin-left:auto}
+.helper{font-size:13px;color:var(--muted);margin-top:6px}
+
+footer{max-width:var(--maxw);margin:32px auto;padding:12px 24px;color:var(--muted);font-size:12px;border-top:1px solid var(--border)}
 @media (max-width: 980px){
   .hero{grid-template-columns:1fr}
-  .kpi-row{grid-template-columns:1fr 1fr}
-  .flex{flex-direction:column}
+  .twocol{grid-template-columns:1fr}
 }
 </style>
 </head>
 <body>
   <header class="header">
     <div class="header-inner">
-      <div class="brand">
-        <div class="logo">A</div><strong>AriaHQ</strong>
-      </div>
+      <div class="brand"><div class="logo">A</div><strong>AriaHQ</strong></div>
       <nav class="nav">
         <a class="active" href="#">Dashboard</a>
         <a href="#">Reports</a>
         <a href="#">Forecast</a>
         <a href="#">Budget</a>
-        <a href="#">Approvals</a>
       </nav>
       <div class="cta">
         <button class="btn">Connect QBO</button>
-        <button class="btn btn-primary">Generate Board Deck</button>
+        <button class="btn btn-primary">Generate Deck</button>
       </div>
     </div>
   </header>
 
   <main class="main">
     <section class="hero">
-      <div class="welcome">
-        <h1>Welcome back</h1>
-        <p>Here’s a clean snapshot of performance. Visual-first, fewer fields — more signal.</p>
+      <div class="copy">
+        <h1>Your financial pulse — at a glance</h1>
+        <p>Fewer widgets, more clarity. A single hero chart, two KPIs, and the next three things that matter.</p>
+        <div class="kpis">
+          <div class="card kpi">
+            <div style="display:flex;justify-content:space-between;align-items:center">
+              <strong>Revenue (MTD)</strong><span class="badge">+8.2%</span>
+            </div>
+            <div class="value">$482,300</div>
+            <svg class="spark" viewBox="0 0 300 44" preserveAspectRatio="none">
+              <polyline fill="none" stroke="#10A37F" stroke-width="3"
+                points="0,36 40,35 80,34 120,31 160,26 200,22 240,18 280,15 300,14"/>
+            </svg>
+          </div>
+          <div class="card kpi">
+            <div style="display:flex;justify-content:space-between;align-items:center">
+              <strong>Gross Margin</strong><span class="badge">Target 56–60%</span>
+            </div>
+            <div class="value">58.4%</div>
+            <svg class="spark" viewBox="0 0 300 44" preserveAspectRatio="none">
+              <rect width="300" height="44" fill="#f6f8f9"/>
+              <polyline fill="none" stroke="#1A7F64" stroke-width="3"
+                points="0,28 40,28 80,27 120,25 160,24 200,23 240,22 280,21 300,20"/>
+            </svg>
+          </div>
+        </div>
       </div>
-      <div class="card">
-        <h3>Cash Flow (90d)</h3>
-        <!-- area chart -->
-        <svg class="spark" viewBox="0 0 300 40" preserveAspectRatio="none">
+      <div class="figure card">
+        <div class="fig-legend">
+          <span><span class="dot rev"></span> Revenue</span>
+          <span><span class="dot gm"></span> GM%</span>
+        </div>
+        <!-- Combined hero chart (Revenue area + GM line) -->
+        <svg viewBox="0 0 680 360" preserveAspectRatio="none">
           <defs>
-            <linearGradient id="g" x1="0" x2="1" y1="0" y2="0">
-              <stop offset="0" stop-color="#10A37F"/>
-              <stop offset="1" stop-color="#1A7F64"/>
+            <linearGradient id="rev" x1="0" x2="0" y1="0" y2="1">
+              <stop offset="0" stop-color="#10A37F" stop-opacity=".35"/>
+              <stop offset="1" stop-color="#10A37F" stop-opacity="0"/>
             </linearGradient>
           </defs>
-          <polyline fill="none" stroke="url(#g)" stroke-width="3"
-            points="0,30 30,28 60,26 90,25 120,22 150,24 180,20 210,18 240,16 270,14 300,12"/>
+          <!-- revenue area -->
+          <path d="M0,300 L60,295 L120,288 L180,270 L240,248 L300,220 L360,198 L420,184 L480,170 L540,160 L600,150 L680,142 L680,360 L0,360 Z"
+                fill="url(#rev)"/>
+          <!-- gm line -->
+          <polyline fill="none" stroke="#1A7F64" stroke-width="3"
+            points="0,220 60,220 120,215 180,210 240,206 300,202 360,200 420,198 480,196 540,195 600,194 680,193"/>
+          <!-- axes (subtle) -->
+          <line x1="0" y1="340" x2="680" y2="340" stroke="#eef0f2"/>
+          <line x1="0" y1="260" x2="680" y2="260" stroke="#f3f5f6"/>
+          <line x1="0" y1="180" x2="680" y2="180" stroke="#f3f5f6"/>
         </svg>
-        <div style="font-size:13px;color:#5b6166;margin-top:6px">Trend improving • +$82k</div>
       </div>
     </section>
 
-    <section class="kpi-row">
+    <section class="section twocol">
       <div class="card">
-        <h3>Revenue (MTD)</h3>
-        <div class="kpi">$482,300</div>
-        <svg class="spark" viewBox="0 0 300 40"><rect width="300" height="40" fill="#f5f7f8"/><polyline fill="none" stroke="#10A37F" stroke-width="3" points="0,30 30,29 60,28 90,26 120,24 150,22 180,21 210,20 240,19 270,18 300,16"/></svg>
+        <strong>Top 3 things to know</strong>
+        <ul class="list">
+          <li class="item">COGS rose in 2 SKUs — supplier price ↑ 3% <span class="badge">Investigate</span></li>
+          <li class="item">AR Days +5 — 2 enterprise invoices late <span class="badge">Collect</span></li>
+          <li class="item">Upside scenario could add +$94k this quarter <span class="badge">Simulate</span></li>
+        </ul>
+        <div class="helper">Aria prioritizes only three items per day to reduce noise.</div>
       </div>
       <div class="card">
-        <h3>Gross Margin</h3>
-        <div class="kpi">58.4%</div>
-        <!-- donut -->
-        <svg viewBox="0 0 120 40" class="spark">
-          <circle cx="60" cy="20" r="14" stroke="#eef1f3" stroke-width="10" fill="none"/>
-          <circle cx="60" cy="20" r="14" stroke="url(#grad2)" stroke-width="10" fill="none"
-            stroke-dasharray="51 88" transform="rotate(-90 60 20)"/>
-          <defs><linearGradient id="grad2"><stop offset="0" stop-color="#10A37F"/><stop offset="1" stop-color="#1A7F64"/></linearGradient></defs>
+        <strong>Approvals</strong>
+        <div class="helper" style="margin:6px 0 10px">Budget progress across teams</div>
+        <svg viewBox="0 0 520 80" style="width:100%">
+          <rect x="10" y="42" width="500" height="10" fill="#eef0f2" rx="5"/>
+          <rect x="10" y="42" width="340" height="10" fill="#10A37F" rx="5"/>
+          <circle cx="350" cy="47" r="11" fill="#10A37F"/>
+          <text x="370" y="51" font-size="13" fill="#5b6166">68% sections approved</text>
         </svg>
-      </div>
-      <div class="card">
-        <h3>Cash Runway</h3>
-        <div class="kpi">11.2 months</div>
-        <svg class="spark" viewBox="0 0 300 40"><rect width="300" height="40" fill="#f5f7f8"/><polyline fill="none" stroke="#1A7F64" stroke-width="3" points="0,35 75,35 150,28 225,22 300,18"/></svg>
-      </div>
-      <div class="card">
-        <h3>Forecast Bias</h3>
-        <div class="kpi">+2.1%</div>
-        <svg class="spark" viewBox="0 0 300 40"><rect width="300" height="40" fill="#f5f7f8"/><polyline fill="none" stroke="#19a27a" stroke-width="3" points="0,24 30,21 60,20 90,22 120,20 150,18 180,17 210,16 240,16 270,15 300,14"/></svg>
-      </div>
-    </section>
-
-    <h3 class="section-title">Drivers & Anomalies</h3>
-    <section class="flex">
-      <div class="card canvas-card">
-        <h3>Top Drivers (This Month)</h3>
-        <!-- horizontal bars -->
-        <svg viewBox="0 0 520 160" style="width:100%">
-          <defs><linearGradient id="bar" x1="0" x2="1"><stop offset="0" stop-color="#10A37F"/><stop offset="1" stop-color="#1A7F64"/></linearGradient></defs>
-          <text x="8" y="24" fill="#5b6166" font-size="12">Price Mix</text>
-          <rect x="120" y="12" width="280" height="16" fill="url(#bar)" rx="8"/>
-          <text x="8" y="64" fill="#5b6166" font-size="12">Volume</text>
-          <rect x="120" y="52" width="220" height="16" fill="url(#bar)" rx="8"/>
-          <text x="8" y="104" fill="#5b6166" font-size="12">Discounts</text>
-          <rect x="120" y="92" width="140" height="16" fill="url(#bar)" rx="8"/>
-          <text x="8" y="144" fill="#5b6166" font-size="12">COGS</text>
-          <rect x="120" y="132" width="190" height="16" fill="url(#bar)" rx="8"/>
-        </svg>
-      </div>
-      <div class="card canvas-card">
-        <h3>Anomalies (Visual)</h3>
-        <table class="table">
-          <tr><th>Signal</th><th>Driver</th><th>Impact</th><th>Status</th></tr>
-          <tr><td>COGS +9% vs trend</td><td>Supplier price ↑</td><td>- $18.7k</td><td><span class="badge">Investigate</span></td></tr>
-          <tr><td>AR Days +5</td><td>2 invoices late</td><td>- $12.1k CF</td><td><span class="badge">Notify</span></td></tr>
-        </table>
-      </div>
-    </section>
-
-    <h3 class="section-title">Approvals Overview</h3>
-    <section class="flex">
-      <div class="card canvas-card">
-        <h3>Progress</h3>
-        <!-- simple progress track -->
-        <svg viewBox="0 0 520 60" style="width:100%">
-          <rect x="10" y="28" width="500" height="8" fill="#eef1f3" rx="4"/>
-          <rect x="10" y="28" width="320" height="8" fill="url(#bar)" rx="4"/>
-          <circle cx="330" cy="32" r="10" fill="#10A37F"/>
-          <text x="350" y="36" font-size="12" fill="#5b6166">64% sections approved</text>
-        </svg>
-      </div>
-      <div class="card canvas-card">
-        <h3>Upcoming Deadlines</h3>
-        <table class="table">
-          <tr><th>Section</th><th>Owner</th><th>Due</th><th>Status</th></tr>
-          <tr><td>Marketing</td><td>@alex</td><td>Aug 25</td><td><span class="badge">Changes Requested</span></td></tr>
-          <tr><td>Sales</td><td>@sam</td><td>Aug 26</td><td><span class="badge">Pending Approval</span></td></tr>
-          <tr><td>Ops</td><td>@jordan</td><td>Aug 28</td><td><span class="badge">Draft</span></td></tr>
-        </table>
       </div>
     </section>
   </main>
 
   <footer>
-    Static visual preview — no backend. Optimized for clean white UI and more charts/visuals.
+    Static visual preview — white, quiet, visual-first. Fewer widgets, larger charts, more breathing room.
   </footer>
 </body>
 </html>
